NWT-48 Show delete items confirm dialog

--- a/app/src/main/res/layout/fragment_deleted_items_list.xml
+++ b/app/src/main/res/layout/fragment_deleted_items_list.xml
@@ -36,12 +36,13 @@
         android:id="@+id/items_list"
         android:name="com.meadowlandapps.simplelists.ui.DeletedItemsFragment"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="@dimen/padding_standard"
         android:layout_marginEnd="@dimen/padding_standard"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBar"
+        app:layout_constraintBottom_toTopOf="@id/button_restore_items"
         app:layoutManager="LinearLayoutManager"
         tools:context=".ui.DeletedItemsFragment"
         tools:listitem="@layout/item_category" />
