--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="padding_standard">16dp</dimen>
     <dimen name="padding_item_standard">8dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="spacing_standard">32dp</dimen>
 </resources>
