NWT-52 Update DB schema to support associating new Reminders with new Item

--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -87,6 +87,7 @@
         app:layout_constraintTop_toBottomOf="@id/addTask_button_add">
 
         <ImageButton
+            android:id="@+id/addItem_reminders_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
