NWT-43 Add title/message to move item dialog

--- a/app/src/main/res/layout/fragment_move_item.xml
+++ b/app/src/main/res/layout/fragment_move_item.xml
@@ -6,8 +6,8 @@
     android:name="com.meadowlandapps.simplelists.ui.MoveCategoryFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.MoveItemFragment"
     tools:listitem="@layout/fragment_item" />
