--- a/app/src/main/res/drawable/ic_move_24.xml
+++ b/app/src/main/res/drawable/ic_move_24.xml
@@ -1,11 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="#CC0000"
+    android:tint="#FFFFFF"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
-        android:fillType="evenOdd"
-        android:pathData="M4,11h16v2h-16z" />
+        android:pathData="M12,8V4l8,8 -8,8v-4H4V8z" />
 </vector>
