--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/menu_item_mark_complete"
+    <item
+        android:id="@+id/menu_item_save"
+        android:icon="@drawable/ic_check_24"
+        android:title="Save Changes"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_item_move"
+        android:icon="@drawable/ic_move_24"
+        android:title="@string/button_move"
+        app:showAsAction="withText" />
+    <item
+        android:id="@+id/menu_item_mark_complete"
         android:title="@string/menu_item_title_complete_item"
         android:icon="@drawable/ic_check_24"
-        app:showAsAction="ifRoom" />
-    <item android:id="@+id/menu_item_delete_item"
+        app:showAsAction="withText" />
+    <item
+        android:id="@+id/menu_item_delete_item"
         android:title="@string/common_delete"
         android:icon="@drawable/ic_delete_24"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="withText" />
 </menu>
