--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="tabIndicatorColor">@color/black</item>
+        <item name="popupMenuBackground">@color/black</item>
     </style>
 </resources>
