NWT-11 Navigate to Item from clicking Notification

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/padding_item_standard"
         android:contentDescription="@string/item_reminders_icon"
-        android:src="@drawable/ic_calendar_24"
+        android:src="@drawable/ic_timer_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/item_complete"
         app:layout_constraintTop_toTopOf="parent"
