--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/share_dialog_fragment"
         android:name="com.meadowlandapps.simplelists.ui.ShareDialogFragment">
         <argument
-            android:name="category"
+            android:name="categoryId"
             app:argType="long" />
     </dialog>
 
@@ -17,7 +17,7 @@
         android:id="@+id/moveItemDialog"
         android:name="com.meadowlandapps.simplelists.ui.MoveItemFragment">
         <argument
-            android:name="item"
+            android:name="itemId"
             app:argType="string" />
     </dialog>
 
@@ -29,6 +29,30 @@
             app:argType="string[]" />
     </dialog>
 
+    <dialog
+        android:id="@+id/deleteConfirmDialog"
+        android:name="com.meadowlandapps.simplelists.ui.DeleteConfirmFragment">
+        <argument
+            android:name="categories"
+            app:argType="string[]" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/time_dialog"
+        android:name="com.meadowlandapps.simplelists.ui.TimeDialogFragment">
+        <argument
+            android:name="time"
+            app:argType="long" />
+    </dialog>
+
+    <dialog
+        android:id="@+id/date_dialog"
+        android:name="com.meadowlandapps.simplelists.ui.DateDialogFragment">
+        <argument
+            android:name="date"
+            app:argType="long" />
+    </dialog>
+
     <fragment
         android:id="@+id/tabContentFragment"
         android:name="com.meadowlandapps.simplelists.ui.TabContentFragment"
@@ -38,14 +62,14 @@
             android:id="@+id/action_tabContentFragment_to_addTaskFragment"
             app:destination="@id/addTaskFragment">
             <argument
-                android:name="type"
+                android:name="categoryId"
                 app:argType="long" />
         </action>
         <action
             android:id="@+id/action_tabContentFragment_to_editTaskFragment"
             app:destination="@id/addTaskFragment">
             <argument
-                android:name="task"
+                android:name="itemId"
                 app:argType="string" />
         </action>
     </fragment>
@@ -59,7 +83,7 @@
             android:id="@+id/action_editCategoriesFragment_to_addTabFragment"
             app:destination="@id/addTabFragment">
             <argument
-                android:name="category"
+                android:name="categoryId"
                 app:argType="long" />
         </action>
         <action
@@ -97,21 +121,21 @@
             android:id="@+id/action_tabContentFragment_to_addTaskFragment"
             app:destination="@id/addTaskFragment">
             <argument
-                android:name="type"
+                android:name="categoryId"
                 app:argType="long" />
         </action>
         <action
             android:id="@+id/action_tabContentFragment_to_editTaskFragment"
             app:destination="@id/addTaskFragment">
             <argument
-                android:name="task"
+                android:name="itemId"
                 app:argType="string" />
         </action>
         <action
             android:id="@+id/action_viewPagerFragment_to_addTabFragment"
             app:destination="@id/addTabFragment">
             <argument
-                android:name="category"
+                android:name="categoryId"
                 app:argType="long" />
         </action>
         <action
@@ -125,7 +149,7 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim">
             <argument
-                android:name="category"
+                android:name="categoryId"
                 app:argType="long" />
         </action>
         <action
@@ -133,40 +157,15 @@
             app:destination="@id/editCategoriesFragment" />
     </fragment>
 
-    <dialog
-        android:id="@+id/deleteConfirmDialog"
-        android:name="com.meadowlandapps.simplelists.ui.DeleteConfirmFragment">
-        <argument
-            android:name="categories"
-            app:argType="string[]" />
-    </dialog>
-
     <fragment
         android:id="@+id/addTabFragment"
         android:name="com.meadowlandapps.simplelists.ui.AddTabFragment"
         android:label="fragment_add_tab"
         tools:layout="@layout/fragment_add_tab">
         <argument
-            android:name="category"
+            android:name="categoryId"
             app:argType="long" />
     </fragment>
-
-    <dialog
-        android:id="@+id/time_dialog"
-        android:name="com.meadowlandapps.simplelists.ui.TimeDialogFragment">
-        <argument
-            android:name="time"
-            app:argType="long" />
-    </dialog>
-
-    <dialog
-        android:id="@+id/date_dialog"
-        android:name="com.meadowlandapps.simplelists.ui.DateDialogFragment">
-        <argument
-            android:name="date"
-            app:argType="long" />
-    </dialog>
-
     <fragment
         android:id="@+id/addTaskFragment"
         android:name="com.meadowlandapps.simplelists.ui.AddTaskFragment"
@@ -176,7 +175,7 @@
             android:id="@+id/action_addTaskFragment_to_moveItemFragment"
             app:destination="@id/moveItemDialog">
             <argument
-                android:name="item"
+                android:name="itemId"
                 app:argType="string" />
         </action>
         <action
@@ -194,10 +193,10 @@
                 app:argType="long" />
         </action>
         <argument
-            android:name="task"
+            android:name="itemId"
             app:argType="string" />
         <argument
-            android:name="type"
+            android:name="categoryId"
             app:argType="long" />
     </fragment>
 
