NWT-60 Add AboutFragment.kt

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,5 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_drawer_deletedItems"
-        android:title="Deleted Items" />
+        android:title="@string/menu_drawer_title_deletedItems" />
+    <item
+        android:id="@+id/menu_drawer_about"
+        android:title="@string/menu_drawer_title_about" />
 </menu>
