--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -144,6 +144,11 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
         <action
+            android:id="@+id/action_viewPagerFragment_to_aboutFragment"
+            app:destination="@id/aboutFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
             android:id="@+id/action_viewPagerFragment_to_shareDialogFragment"
             app:destination="@id/share_dialog_fragment"
             app:enterAnim="@anim/nav_default_enter_anim"
@@ -199,5 +204,10 @@
             android:name="categoryId"
             app:argType="long" />
     </fragment>
+
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.meadowlandapps.simplelists.ui.AboutFragment"
+        tools:layout="@layout/fragment_about" />
 
 </navigation>
