NWT-58 Add ripple to Reminders buttons

--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -70,6 +70,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:padding="@dimen/padding_imageButton"
             android:contentDescription="@string/item_add_reminder"
             android:src="@drawable/ic_add_24" />
 
