--- a/app/src/main/res/layout/item_reminder.xml
+++ b/app/src/main/res/layout/item_reminder.xml
@@ -9,6 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="@dimen/padding_imageButton"
         android:contentDescription="@string/reminder_remove"
         android:src="@drawable/ic_remove_24" />
 
