--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="text_margin">16dp</dimen>
 
     <dimen name="spacing_standard">32dp</dimen>
+
+    <dimen name="padding_imageButton">4dp</dimen>
 </resources>
