--- a/app/src/main/res/layout/item_reminder.xml
+++ b/app/src/main/res/layout/item_reminder.xml
@@ -6,8 +6,8 @@
 
     <ImageButton
         android:id="@+id/reminder_button_remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/imageSize"
+        android:layout_height="@dimen/imageSize"
         android:layout_alignParentStart="true"
         android:background="?android:attr/selectableItemBackground"
         android:padding="@dimen/padding_imageButton"
@@ -20,9 +20,10 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/reminder_button_remove"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/padding_standard"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="@dimen/padding_item_standard"
         android:textAlignment="center"
-        android:textAppearance="?attr/textAppearanceCaption" />
+        android:textAppearance="?attr/textAppearanceBody1" />
 
     <TextView
         android:id="@+id/reminder_time"
@@ -30,8 +31,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/padding_standard"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="@dimen/padding_item_standard"
         android:textAlignment="center"
-        android:textAppearance="?attr/textAppearanceCaption" />
+        android:textAppearance="?attr/textAppearanceBody1" />
 
 </RelativeLayout>
